fix: 추천도서 z-index값 수정

--- a/css/random-book.css
+++ b/css/random-book.css
@@ -13,6 +13,7 @@
     justify-content: center;
     position: fixed;
     right: 0;
+    z-index:100000000000000000000000000000000;
 }
 
 .random-book:hover {
